--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container">
         <h1>ToDo List REST client</h1>
-        <div class="jumbotron">
+        <div class="jumbotron" onclick="titleClicked()">
             <h2>Your tasks</h2>
         </div>
         <table class="table table-striped table-condensed" id="task-list">
@@ -34,16 +34,17 @@
         <form id="add-task" action="/insert_task" method="post" class="form-inline">
             <div class="form-group">
                 <label>Insert a new task:</label>
-                <input type="text" name="description" class="form-control">
+                <input type="text" name="description" class="form-control" id="descriptioninput">
             </div>
             <div class="checkbox">
                 <input type="checkbox" name="urgent"> Urgent
             </div>
-            <input type="submit" value="Enter" class="btn btn-primary">
+            <input type="submit" value="Enter" class="btn btn-primary" onclick="return checkForm()">
         </form>
     </div>
 {% endblock %}
 
 {% block scripts %}
     {{ super() }}
+    <script src="{{ url_for('static', filename='js/todolist.js') }}"></script>
 {% endblock %}
