--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container">
         <h1>ToDo List REST client</h1>
-        <div class="jumbotron" onclick="titleClicked()">
+        <div class="jumbotron">
             <h2>Your tasks</h2>
         </div>
         <table class="table table-striped table-condensed" id="task-list">
@@ -31,15 +31,16 @@
             </tbody>
         </table>
 
+        <div id="errorbox"></div>
         <form id="add-task" action="/insert_task" method="post" class="form-inline">
             <div class="form-group">
-                <label>Insert a new task:</label>
-                <input type="text" name="description" class="form-control" id="descriptioninput">
+                <label for="inputdescription" class="control-label">Insert a new task:</label>
+                <input id="inputdescription" type="text" name="description" class="form-control" id="descriptioninput">
             </div>
             <div class="checkbox">
                 <input type="checkbox" name="urgent"> Urgent
             </div>
-            <input type="submit" value="Enter" class="btn btn-primary" onclick="return checkForm()">
+            <input type="submit" value="Enter" class="btn btn-primary">
         </form>
     </div>
 {% endblock %}
